--- a/Electric-Vehicles-Data-Science-Project.ipynb
+++ b/Electric-Vehicles-Data-Science-Project.ipynb
@@ -865,6 +865,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "######  The electric range of vehicles in this dataset varies widely, as indicated by the high standard deviation. the average electric range across all vehicles is approximately 83.92 miles. This tells us that on average, the vehicles in this dataset can travel roughly 84 miles on a single charge ,there's a significant proportion of vehicles with no electric range(0), which might include missing data or data entry errors that need further investigation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -879,6 +886,7 @@
    ],
    "source": [
     "## how many rows that has the electric rang = 0\n",
+    "\n",
     "print((data['electricRange']==0).sum())"
    ]
   },
@@ -886,7 +894,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### we have observed an unusual distribution of values in the 'Electric Range' column, with a large number of vehicles having a value of 0. This could potentially indicate missing or unknown values in the dataset.\n",
+    "###### a large number of vehicles having a value of 0 (1243 vehicles). This could potentially indicate missing or unknown values in the dataset.\n",
     "\n",
     "###### To account for this uncertainty and still make use of the available data we will fill the missing or zero electric range values with average values based on the vehicle model and type. "
    ]
