--- a/Electric-Vehicles-Data-Science-Project.ipynb
+++ b/Electric-Vehicles-Data-Science-Project.ipynb
@@ -937,8 +937,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### after running the code we could still see there's still 298 vehicles that has electric range = 0,we only replaced 945 vehicles with their mean electric range based on the model and electric vehicle type ,this could be one of the two reasons\n",
-    "### one, some of the vehicles that has the same model and electric vehicle type all have electric range = 0.Two, the vehicle that have electric range = 0 could have a unique model and type.\n",
+    "###### after running the code we could still see there's still 298 vehicles that has electric range = 0,we only replaced 945 vehicles with their mean electric range based on the model and electric vehicle type ,this could be one of the two reasons\n",
+    "###### one, some of the vehicles that has the same model and electric vehicle type all have electric range = 0 (and at that case we consider them outliers that could result in baised outcomes).Two, the vehicle that have electric range = 0 could have a unique model and type.\n",
     "###### the 298 vehicles that have electric range = 0 will be dropped"
    ]
   },
