feature eng. electric range

--- a/Electric-Vehicles-Data-Science-Project.ipynb
+++ b/Electric-Vehicles-Data-Science-Project.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Importing reguired libraries\n",
+    "****"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +21,14 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### API request call\n",
+    "*****"
    ]
   },
   {
@@ -90,85 +106,6 @@
     "# Now `df` contains only the specified number of rows.\n",
     "# You can now export this DataFrame to a CSV file\n",
     "df.to_csv('electricVehicledata.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2543\n",
-      "         county           city  modelYear       make     model  \\\n",
-      "10         King       Kirkland       2018      TESLA   MODEL 3   \n",
-      "26         King       Kirkland       2018      TESLA   MODEL 3   \n",
-      "33         King        Seattle       2015     NISSAN      LEAF   \n",
-      "85         King      Sammamish       2019      TESLA   MODEL 3   \n",
-      "109        King        Seattle       2019     NISSAN      LEAF   \n",
-      "...         ...            ...        ...        ...       ...   \n",
-      "2995       King       Issaquah       2023        BMW        IX   \n",
-      "2996   Thurston        Olympia       2017       FIAT       500   \n",
-      "2997  Jefferson  Port Townsend       2023  CHEVROLET  BOLT EUV   \n",
-      "2998       King        Seattle       2021      TESLA   MODEL Y   \n",
-      "2999       King      Shoreline       2015     NISSAN      LEAF   \n",
-      "\n",
-      "                 electricVehicleType  electricRange  \\\n",
-      "10    Battery Electric Vehicle (BEV)            215   \n",
-      "26    Battery Electric Vehicle (BEV)            215   \n",
-      "33    Battery Electric Vehicle (BEV)             84   \n",
-      "85    Battery Electric Vehicle (BEV)            220   \n",
-      "109   Battery Electric Vehicle (BEV)            150   \n",
-      "...                              ...            ...   \n",
-      "2995  Battery Electric Vehicle (BEV)              0   \n",
-      "2996  Battery Electric Vehicle (BEV)             84   \n",
-      "2997  Battery Electric Vehicle (BEV)              0   \n",
-      "2998  Battery Electric Vehicle (BEV)              0   \n",
-      "2999  Battery Electric Vehicle (BEV)             84   \n",
-      "\n",
-      "                                        electricUtility  \n",
-      "10        PUGET SOUND ENERGY INC||CITY OF TACOMA - (WA)  \n",
-      "26        PUGET SOUND ENERGY INC||CITY OF TACOMA - (WA)  \n",
-      "33         CITY OF SEATTLE - (WA)|CITY OF TACOMA - (WA)  \n",
-      "85        PUGET SOUND ENERGY INC||CITY OF TACOMA - (WA)  \n",
-      "109        CITY OF SEATTLE - (WA)|CITY OF TACOMA - (WA)  \n",
-      "...                                                 ...  \n",
-      "2995      PUGET SOUND ENERGY INC||CITY OF TACOMA - (WA)  \n",
-      "2996                             PUGET SOUND ENERGY INC  \n",
-      "2997  BONNEVILLE POWER ADMINISTRATION||PUGET SOUND E...  \n",
-      "2998       CITY OF SEATTLE - (WA)|CITY OF TACOMA - (WA)  \n",
-      "2999       CITY OF SEATTLE - (WA)|CITY OF TACOMA - (WA)  \n",
-      "\n",
-      "[2543 rows x 8 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Step 2: Load the CSV file\n",
-    "df = pd.read_csv('electricVehiclesxxx.csv')\n",
-    "\n",
-    "# Step 3: Check for duplicate rows\n",
-    "duplicates = df.duplicated()\n",
-    "\n",
-    "# Step 4: Count the number of duplicate rows\n",
-    "num_duplicates = duplicates.sum()\n",
-    "\n",
-    "print(num_duplicates)\n",
-    "print(df[duplicates])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_cleaned = df.drop_duplicates()\n",
-    "df_cleaned.to_csv('cleaned_electricVehiclesTest.csv', index=False)"
    ]
   },
   {
@@ -729,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +713,7 @@
        "(3357, 8)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +748,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -848,12 +785,12 @@
      "text": [
       "       electricRange\n",
       "count    3357.000000\n",
-      "mean      155.709203\n",
-      "std       109.451727\n",
+      "mean       83.916592\n",
+      "std       101.080454\n",
       "min         0.000000\n",
-      "25%        35.000000\n",
-      "50%       208.000000\n",
-      "75%       239.922481\n",
+      "25%         0.000000\n",
+      "50%        30.000000\n",
+      "75%       200.000000\n",
       "max       330.000000\n"
      ]
     }
@@ -873,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1040,18 +977,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     county        city modelYear   make    model  \\\n",
-      "115  Sonoma  Santa Rosa      2018  HONDA  CLARITY   \n",
-      "\n",
-      "                        electricVehicleType  electricRange electricUtility  \n",
-      "115  Plug-in Hybrid Electric Vehicle (PHEV)           47.0             NaN  \n"
+      "Empty DataFrame\n",
+      "Columns: [county, city, modelYear, make, model, electricVehicleType, electricRange, electricUtility]\n",
+      "Index: []\n"
      ]
     }
    ],
@@ -1068,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1160,19 +1095,19 @@
    "source": [
     "##### Handeling duplicates\n",
     "****\n",
-    "###### we have 1013 duplicates that need to removed \n"
+    "###### we have 1013 duplicates that need to be removed \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1082\n"
+      "0\n"
      ]
     }
    ],
@@ -1182,6 +1117,46 @@
     "\n",
     "# romve duplicates\n",
     "data = data.drop_duplicates()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 🛠️Feature Engineering\n",
+    "****"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### In order to answer our 5th question which is 'Can we build a classifier that can classify the vehicle electric range by using the vehicles features?' we will first need to discretize the electric range into three class labels.This step is crucial because it transforms our regression problem into a classification problem, where each vehicle is assigned a label based on its electric range.\n",
+    "\n",
+    "###### Short Range: Vehicles with a range of less than 100 miles.\n",
+    "###### Medium Range: Vehicles with a range of 100 to 200 miles.\n",
+    "###### Long Range: Vehicles with a range greater than 200 miles."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Discretize the electric range\n",
+    "bins = [0, 100, 200, float('inf')]\n",
+    "labels = ['Short Range', 'Medium Range', 'Long Range']\n",
+    "data['Range Class'] = pd.cut(data['electricRange'], bins=bins, labels=labels, include_lowest=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drooping electric range"
    ]
   },
   {
