--- a/Electric-Vehicles-Data-Science-Project.ipynb
+++ b/Electric-Vehicles-Data-Science-Project.ipynb
@@ -645,7 +645,7 @@
     "\n",
     "# Concatenate the DataFrames\n",
     "combined_df = pd.concat([df, df2], ignore_index=True)\n",
-    "combined_df.to_csv('combined_dataset.csv', index=False)\n",
+    "combined_df.to_csv('combined_dataset(unstructured).csv', index=False)\n",
     "\n",
     "\n"
    ]
@@ -697,7 +697,7 @@
     }
    ],
    "source": [
-    "data  =pd.read_csv('combined_dataset.csv')\n",
+    "data  =pd.read_csv('combined_dataset(unstructured).csv')\n",
     "# Viewing the first few rows\n",
     "print(data.head())"
    ]
@@ -1131,7 +1131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### In order to answer our 5th question which is 'Can we build a classifier that can classify the vehicle electric range by using the vehicles features?' we will first need to discretize the electric range into three class labels.This step is crucial because it transforms our regression problem into a classification problem, where each vehicle is assigned a label based on its electric range.\n",
+    "###### In order to answer our 5th question which is 'Can we build a model that could classify vehicles based on their electric range?' we will first need to discretize the electric range into three class labels.This step is crucial because it transforms our regression problem into a classification problem, where each vehicle is assigned a label based on its electric range.\n",
     "\n",
     "###### Short Range: Vehicles with a range of less than 100 miles.\n",
     "###### Medium Range: Vehicles with a range of 100 to 200 miles.\n",
