--- a/Electric-Vehicles-Data-Science-Project.ipynb
+++ b/Electric-Vehicles-Data-Science-Project.ipynb
@@ -4,13 +4,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Importing reguired libraries\n",
+    "##### 🔬Problem overview\n",
+    "*****\n",
+    "\n",
+    "As the CEOs/Founders  of a startup focused on adoption of electric vehicles (EV) to the Saudi market aligning with Saudi Arabia vision 2030  to accelerate the transition to sustainable transportation, We need to understand the factors influencing consumer preferences, adoption rates, and overall market trends for electric vehicles ,but to do so effectively, we must base our strategies on solid data analysis and market insights. Addressing the five key questions derived from the data collected can help us overcome challenges and make informed decisions.\n",
+    "\n",
+    "\n",
+    "\n",
+    "1.Which country has the highest adoption of electric vehicles?\n",
+    "\n",
+    "2.What are the trends in EV adoption over time?\n",
+    "\n",
+    "3.How does EV adoption vary by geographic location?\n",
+    "\n",
+    "4.Which manufacturers and models are most popular among electric vehicle owners?\n",
+    "\n",
+    "5.What is the relationship between electric vehicle range and vehicle type?\n",
+    "\n",
+    "6.Can we build a model that could classify vehicles based on their electric range?\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 🏗️Import Necessary Libraries\n",
     "****"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +52,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### 📊 Data Collection\n",
     "##### API request call\n",
-    "*****"
+    "\n",
+    "*****\n",
+    "\n",
+    "Data source:\n",
+    "The dataset used in this project was obtained from the Electric Vehicle Data API hosted on RapidAPI. This API provides comprehensive information about electric vehicles, including specifications like electric range, manufacturer details, model specifics, and more. The data was accessed using the Python requests library to query the API and then processed using the Pandas library for analysis and model preparation.\n",
+    "\n",
+    "API Details:\n",
+    "\n",
+    "API Name: Electric Vehicle Data API\n",
+    "Access URL: https://rapidapi.com/adrienpelletierlaroche/api/electric-vehicle-data2\n",
+    "Date of Access: Monday, March 25, 2024,9:31:07 AM\n",
+    "Data Retrieval Method: API requests via requests library in Python.\n",
+    "\n",
+    "Challenges Encountered:\n",
+    "-Rate Limiting: API access was subject to rate limiting we were able to only get 500 rows ,and the same rows resulted in each request made."
    ]
   },
   {
@@ -697,7 +737,7 @@
     }
    ],
    "source": [
-    "data  =pd.read_csv('combined_dataset(unstructured).csv')\n",
+    "data  =pd.read_csv('combined_dataset.csv')\n",
     "# Viewing the first few rows\n",
     "print(data.head())"
    ]
@@ -977,16 +1017,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empty DataFrame\n",
-      "Columns: [county, city, modelYear, make, model, electricVehicleType, electricRange, electricUtility]\n",
-      "Index: []\n"
+      "     county        city modelYear   make    model  \\\n",
+      "115  Sonoma  Santa Rosa      2018  HONDA  CLARITY   \n",
+      "\n",
+      "                        electricVehicleType  electricRange electricUtility  \n",
+      "115  Plug-in Hybrid Electric Vehicle (PHEV)           47.0             NaN  \n"
      ]
     }
    ],
@@ -1003,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,6 +1199,16 @@
    "outputs": [],
    "source": [
     "# drooping electric range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# saving the processed and cleaned data into CSV file\n",
+    "data.to_csv('electricVehicledata(structured_cleaned).csv', index=False)"
    ]
   },
   {
